--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -16,7 +16,7 @@
             <div class="make-it-rounded make-it-semi-back make-it-normal make-it-left">
                 <p class="card-title-container make-it-white make-it-dark-back">Sobre este proyecto</p>
                 <br>
-                <p class="section make-it-small">
+                <p class="section ">
                     El proyecto consiste en un backend para una tienda ficticia llamada <b>'Shopnhour'</b> que vende modelos de trenes. 
                     Integra una base de datos (Mongo) sobre Node y Express para montar un servicio de backend que 
                     provee un catálogo de productos y la gestión de carritos de compras. El catálogo de productos 
@@ -35,7 +35,7 @@
 
                 <div class="column is-6 make-it-white">
                     <p class="card-title-container make-it-semi make-it-rounded-top make-it-dark-back">> Rutas</p>
-                    <div class="make-it-small make-it-dark make-it-rounded-bottom make-it-semi-back">
+                    <div class=" make-it-dark make-it-rounded-bottom make-it-semi-back">
 
                         <div class="section">
                             <br>
@@ -73,7 +73,7 @@
                     </div>
                     
                 </div>
-                <div class="column is-12 make-it-semi make-it-small make-it-center section">
+                <div class="column is-12 make-it-semi  make-it-center section">
                     <br>
                     <p>Ernesto AC - <b>Proyecto de Programación Backend II: Desarrollo Avanzado de Backend, comisión 70460</b></p>
                 </div>
