--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -18,17 +18,17 @@
 
             <div class="">
                 <form class="make-it-center" id="loginForm">
-                    <div class="make-it-white make-it-small section" for="email">
+                    <div class="make-it-white  section" for="email">
                         <p class="make-it-dark">E-mail</p>
-                        <input class="input make-it-small" name="email" type="email" required />
+                        <input class="input " name="email" type="email" required />
                     </div>
 
-                    <div class="make-it-white make-it-small section " for="password">
+                    <div class="make-it-white  section " for="password">
                         <p class="make-it-dark">Password</p>
-                        <input class="input make-it-small" name="password" type="password" required />
+                        <input class="input " name="password" type="password" required />
                     </div>
 
-                    <button class="section button make-it-small" type="submit">Login</button>
+                    <button class="section button " type="submit">Login</button>
                 </form>
             </div>
         </div>
