--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
             </a>
         </div>
 
-        <div class="grid-container-6c-by-1r make-it-dark-back make-it-rounded make-it-small is-dark">
+        <div class="grid-container-6c-by-1r make-it-dark-back make-it-rounded  is-dark">
             <a class="navbar-item is-small make-it-rounded make-it-semi" href="/">
                 <i class="fas fa-home small-section"></i> Home
             </a>
@@ -48,7 +48,7 @@
         {{{body}}}
     </main>
 
-    <footer class="content section make-it-semi make-it-small">
+    <footer class="content section make-it-semi ">
         <p>&copy; 2025 Shopnhour</p>
     </footer>
 
