--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -401,8 +401,13 @@ body {
 }
 
 .section {
-  margin: .3rem !important;
-  padding: .7rem !important
+  margin: .2rem !important;
+  padding: .6rem !important
+}
+
+.mid-section {
+  margin: .4rem !important;
+  padding: .4rem !important
 }
 
 .small-section {
@@ -767,4 +772,17 @@ textarea:focus {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around
+}
+
+
+
+@media (max-width: 1279px) {
+  body {
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat-x;
+    background-attachment: fixed;
+    background-color: #172330;
+    padding: 8.5rem 1rem 3rem 1rem !important;
+  }
 }
