--- a/src/views/addProduct.handlebars
+++ b/src/views/addProduct.handlebars
@@ -13,54 +13,54 @@
         <h2 class="section make-it-white">Add a New Product</h2>
         <div class="section box make-it-semi-back ">
             <label class="make-it-dark " for="title">Title:</label>
-            <input placeholder="Title" class="input is-dark is-small" type="text" id="title" name="title" required value="{{title}}"><br><br>
+            <input placeholder="Title" class="input is-dark " type="text" id="title" name="title" required value="{{title}}"><br><br>
 
             <label class="make-it-dark " for="description">Description:</label>
-            <textarea placeholder="Description" class="textarea is-small" id="description" name="description" required>{{description}}</textarea><br><br>
+            <textarea placeholder="Description" class="textarea " id="description" name="description" required>{{description}}</textarea><br><br>
 
             <label class="make-it-dark " for="code">Code:</label>
-            <input placeholder="ABC-DEC" class="input is-small" type="text" id="code" name="code" required value="{{code}}"><br><br>
+            <input placeholder="ABC-DEC" class="input " type="text" id="code" name="code" required value="{{code}}"><br><br>
 
             <label class="make-it-dark " for="price">Price:</label>
-            <input placeholder="Price" class="input is-small is-dark" type="number" id="price" name="price" min="0" required value="{{price}}"><br><br>
+            <input placeholder="Price" class="input  is-dark" type="number" id="price" name="price" min="0" required value="{{price}}"><br><br>
 
             <label class="make-it-dark " for="stock">Current Stock:</label>
-            <input placeholder="Stock" class="input is-small" type="number" id="stock" name="stock" min="0" required value="{{stock}}"><br><br>
+            <input placeholder="Stock" class="input " type="number" id="stock" name="stock" min="0" required value="{{stock}}"><br><br>
 
             <label class="make-it-dark " for="category">Category:</label>
-            <input placeholder="Category" class="input is-small" type="text" id="category" name="category" required value="{{category}}"><br><br>
+            <input placeholder="Category" class="input " type="text" id="category" name="category" required value="{{category}}"><br><br>
 
             <label class="make-it-dark " for="pieces">Pieces:</label>
-            <input placeholder="Number of Pieces" class="input is-small" type="number" id="pieces" name="pieces" min="1" required value="{{pieces}}"><br><br>
+            <input placeholder="Number of Pieces" class="input " type="number" id="pieces" name="pieces" min="1" required value="{{pieces}}"><br><br>
 
             <label class="make-it-dark " for="handle">Handle:</label>
-            <input placeholder="Handle" class="input is-small" type="text" id="handle" name="handle" required value="{{handle}}"><br><br>
+            <input placeholder="Handle" class="input " type="text" id="handle" name="handle" required value="{{handle}}"><br><br>
 
             <label class="make-it-dark " for="wheelArrangement">Wheel Arrangement:</label>
-            <input placeholder="Wheel Arrangement" class="input is-small" type="text" id="wheelArrangement" name="wheelArrangement" required value="{{wheelArrangement}}"><br><br>
+            <input placeholder="Wheel Arrangement" class="input " type="text" id="wheelArrangement" name="wheelArrangement" required value="{{wheelArrangement}}"><br><br>
 
             <label class="make-it-dark " for="lighting">Lighting:</label>
-            <select class="input is-small" id="lighting" name="lighting" required>
+            <select class="input " id="lighting" name="lighting" required>
                 <option value="true" {{#if lighting}}selected{{/if}}>Yes</option>
                 <option value="false" {{#unless lighting}}selected{{/unless}}>No</option>
             </select><br><br>
 
             <label class="make-it-dark " for="motorizable">Motorizable:</label>
-            <select class="input is-small" id="motorizable" name="motorizable" required>
+            <select class="input " id="motorizable" name="motorizable" required>
                 <option value="true" {{#if motorizable}}selected{{/if}}>Yes</option>
                 <option value="false" {{#unless motorizable}}selected{{/unless}}>No</option>
             </select><br><br>
 
             <label class="make-it-dark " for="status">Status:</label>
-            <select class="input is-small" id="status" name="status" required>
+            <select class="input " id="status" name="status" required>
                 <option value="true" {{#if status}}selected{{/if}}>Active</option>
                 <option value="false" {{#unless status}}selected{{/unless}}>Inactive</option>
             </select><br><br>
 
             <label class="make-it-dark " for="file">Upload Image:</label>
-            <input class="input is-small" type="file" id="file" name="file" accept="image/*" required><br><br>
+            <input class="input " type="file" id="file" name="file" accept="image/*" required><br><br>
 
-            <button class="button is-small" type="submit">Add Product</button>
+            <button class="button " type="submit">Add Product</button>
         </div>
     </form>
 </body>
