--- a/src/views/deleteProduct.handlebars
+++ b/src/views/deleteProduct.handlebars
@@ -17,7 +17,7 @@
         <br>
         <br>
         
-        <button class="button is-small" type="submit">Delete Product</button>
+        <button class="button " type="submit">Delete Product</button>
     </form>
 
     <p id="resultMessage">{{resultMessage}}</p>
@@ -49,7 +49,7 @@
         });
     </script>
 
-    <div class="section make-it-semi-back make-it-normal is-small">
+    <div class="section make-it-semi-back make-it-normal ">
         <a href="/">View Products - Static</a> 
         <b>|</b>
         <a href="/realtimeproducts">View Products - Real-time</a>
