--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -19,14 +19,11 @@
         </div>
 
         <div class="grid-container-6c-by-1r make-it-dark-back make-it-rounded small-section">
-            <a class="navbar-item  make-it-rounded make-it-semi mid-section" href="/">
-                <i class="fas fa-home small-section"></i> Home
-            </a>
             <a class="navbar-item  make-it-rounded make-it-semi mid-section" href="/products">
-                <i class="fas fa-box-open small-section"></i> Products
+                Products
             </a>
             <a class="navbar-item  make-it-rounded make-it-semi mid-section" href="/carts/5ab6e82f-b289-4dff-8ff5-25dc0f749ee2">
-                <i class="fas fa-shopping-cart small-section"></i> Cart
+                Cart
             </a>
 
             {{#if user}}
@@ -38,7 +35,7 @@
                 </a>
             {{else}}
                 <a class="navbar-item  make-it-rounded make-it-semi mid-section" href="/login/">
-                    <i class="fas fa-key small-section"></i> Log in
+                    <i class="fas fa-key small-section"></i> Login
                 </a>
             {{/if}}
         </div>
