Navbar fix, responsiveness for mobile.

--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <title>Admin Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
-    <link rel="stylesheet" href="/static/styles.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
 </head>
     <body>
         <h2 class=" section make-it-left make-it-white-back make-it-dark make-it-rounded-top make-it-normal">Admin Dashboard</h2>
@@ -14,42 +12,42 @@
 
         <div class="columns is-multiline is-centered">
             <!-- Add Product -->
-            <div class="column is-2">
+            <div class="column is-2 section">
                 <a href="/forms/add-product" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
                 <span class="icon is-large"><i class="fas fa-plus fa-2x"></i></span>
-                <p class="subtitle is-5">Add Product</p>
+                <p class="section make-it-small make-it-normal">Add Product</p>
                 </a>
             </div>
 
             <!-- Delete Product -->
-            <div class="column is-2">
+            <div class="column is-2 section">
                 <a href="/forms/delete-product" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
                 <span class="icon is-large"><i class="fas fa-trash-alt fa-2x"></i></span>
-                <p class="subtitle is-5">Delete Product</p>
+                <p class="section make-it-small make-it-normal">Delete Product</p>
                 </a>
             </div>
 
             <!-- Real-Time Products -->
-            <div class="column is-2">
+            <div class="column is-2 section">
                 <a href="/realtime/products" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
                 <span class="icon is-large"><i class="fas fa-boxes fa-2x"></i></span>
-                <p class="subtitle is-5">Real-Time Products</p>
+                <p class="section make-it-small make-it-normal">Real-Time Products</p>
                 </a>
             </div>
 
             <!-- Real-Time Carts -->
-            <div class="column is-2">
+            <div class="column is-2 section">
                 <a href="/realtime/carts" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
                 <span class="icon is-large"><i class="fas fa-shopping-cart fa-2x"></i></span>
-                <p class="subtitle is-5">Real-Time Carts</p>
+                <p class="section make-it-small make-it-normal">Real-Time Carts</p>
                 </a>
             </div>
 
             <!-- All Carts View -->
-            <div class="column is-2">
+            <div class="column is-2 section">
                 <a href="/carts" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
                 <span class="icon is-large"><i class="fas fa-clipboard-list fa-2x"></i></span>
-                <p class="subtitle is-5">All Carts</p>
+                <p class="section make-it-small make-it-normal">All Carts</p>
                 </a>
             </div>
             </section>
