--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -58,6 +58,15 @@ body {
   margin: 0
 }
 
+.navbar-item{
+  display: inline-block;
+  min-width: 6.8rem !important;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
 .cart-count {
   background-color: rgba(97, 110, 124, .999);
   color: #fff;
@@ -105,7 +114,7 @@ body {
   padding: .2rem .5rem;
   font-size: .9rem;
   position: relative;
-  width: 3rem
+  width: 8rem
 }
 
 .logo-back {
@@ -788,5 +797,13 @@ textarea:focus {
 
   .grid-container-3c-by-1r{
     grid-template-columns: repeat(1, 1fr)
+  }
+
+  .logo-image {
+    border-radius: 20%;
+    padding: .2rem .5rem;
+    font-size: .9rem;
+    position: relative;
+    width: 6rem
   }
 }
