--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -14,27 +14,31 @@
     <header class="title-bar-container other-bar is-frozen make-it-semi-back make-it-normal  grid-container-2c-by-1r">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
-                <img src="/static/shopnhour_blue.png" alt="Shopnhour Store Logo" width="115px">
+                <img class="logo-image" src="/static/shopnhour_blue.png" alt="Shopnhour Store Logo" width="115px">
             </a>
         </div>
 
         <div class="grid-container-6c-by-1r make-it-dark-back make-it-rounded small-section">
-            <a class="navbar-item  make-it-rounded make-it-semi mid-section" href="/products">
-                Products
-            </a>
-            <a class="navbar-item  make-it-rounded make-it-semi mid-section" href="/carts/5ab6e82f-b289-4dff-8ff5-25dc0f749ee2">
-                Cart
-            </a>
+            <div class="grid-container-2c-by-1r">
+                <a class="navbar-item  make-it-rounded make-it-semi " href="/products">
+                    <span><i class="fas fa-box-open small-section"></i></span><p>Products</p>
+                </a>
+                <a class="navbar-item  make-it-rounded make-it-semi " href="/carts/5ab6e82f-b289-4dff-8ff5-25dc0f749ee2">
+                    <span><i class="fas fa-shopping-cart small-section"></i></span><p>Cart</p>
+                </a>
+            </div>
 
             {{#if user}}
-                <a class="navbar-item  make-it-rounded make-it-semi mid-section" href="/logout/">
-                    <i class="fas fa-sign-out-alt small-section"></i> Log out
-                </a>
-                <a class="navbar-item  make-it-rounded make-it-semi mid-section" href="/current/">
-                    <i class="fas fa-user small-section"></i> {{user.username}}
-                </a>
+                <div class="grid-container-2c-by-1r">
+                    <a class="navbar-item  make-it-rounded make-it-semi " href="/current/">
+                        <span><i class="fas fa-user small-section"> </i></span> <p>{{user.username}}</p>
+                    </a>
+                    <a class="navbar-item  make-it-rounded make-it-semi " href="/logout/">
+                        <span><i class="fas fa-sign-out-alt small-section"></i></span><p>Log out</p>
+                    </a>
+                </div>
             {{else}}
-                <a class="navbar-item  make-it-rounded make-it-semi mid-section" href="/login/">
+                <a class="navbar-item  make-it-rounded make-it-semi " href="/login/">
                     <i class="fas fa-key small-section"></i> Login
                 </a>
             {{/if}}
