--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -21,8 +21,8 @@
                 {{#each cart.products}}
                 <tr>
                     <td class="section" width="64px"><img src="{{this.imageURL}}"  alt="{{this.title}}"></td>
-                    <td class="make-it-dark ">{{this.title}} <br> <a class="make-it-semi">({{this.pid}})</a></td>
-                    <td class="make-it-dark ">{{this.code}}</td>
+                    <td class="make-it-dark make-it-small  ">{{this.title}} <br> <a class="make-it-semi">({{this.pid}})</a></td>
+                    <td class="make-it-dark make-it-small  ">{{this.code}}</td>
                     <td>{{this.description}}</td>
                     <td class="make-it-center">{{this.pieces}}</td>
                     <td class="make-it-center">${{this.price}}</td>
