--- a/src/views/cartsStatic.handlebars
+++ b/src/views/cartsStatic.handlebars
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top make-it-normal">Cart List - Static View</h2>
+    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-small  make-it-rounded-top make-it-normal">Cart List - Static View</h2>
 
     <!-- Sorting and Pagination Controls -->
     <section class="section">
@@ -109,7 +109,7 @@
                                             {{/each}}
                                         </table>
                                     </div>
-                                    <div class="make-it-semi-back make-it-dark make-it-rounded section">
+                                    <div class="make-it-semi-back make-it-dark make-it-small  make-it-rounded section">
                                         <strong>Products in Cart:</strong> {{this.products.length}}
                                     </div>
                                 </div>
