--- a/src/views/deleteProduct.handlebars
+++ b/src/views/deleteProduct.handlebars
@@ -17,7 +17,7 @@
         <br>
         <br>
         
-        <button class="button " type="submit">Delete Product</button>
+        <button class="button is-small" type="submit">Delete Product</button>
     </form>
 
     <p id="resultMessage">{{resultMessage}}</p>
