--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -28,14 +28,14 @@
             <div class="columns is-multiline section">
                 <div class="column is-6 make-it-white">
                     <p class="card-title-container make-it-semi make-it-rounded-top make-it-dark-back">> Navegación y uso</p>
-                    <div class="section make-it-semi-back make-it-dark make-it-rounded-bottom">
+                    <div class="section make-it-semi-back make-it-dark make-it-small  make-it-rounded-bottom">
                         - N/A
                     </div>
                 </div>
 
                 <div class="column is-6 make-it-white">
                     <p class="card-title-container make-it-semi make-it-rounded-top make-it-dark-back">> Rutas</p>
-                    <div class=" make-it-dark make-it-rounded-bottom make-it-semi-back">
+                    <div class=" make-it-dark make-it-small  make-it-rounded-bottom make-it-semi-back">
 
                         <div class="section">
                             <br>
