--- a/src/views/realTimeCarts.handlebars
+++ b/src/views/realTimeCarts.handlebars
@@ -33,7 +33,7 @@
                         ${paginatedCarts.map(cart => `
                             <div class="box make-it-white-back">
                                 <h5 class="make-it-dark-back make-it-white make-it-center make-it-rounded-top ">Cart ${cart.cid}</h5>
-                                <table class="table make-it-dark is-hoverable is-fullwidth">
+                                <table class="table make-it-dark make-it-small  is-hoverable is-fullwidth">
                                     <thead>
                                         <tr class="make-it-semi-back  make-it-rounded">
                                             <th>PID</th>
@@ -75,13 +75,13 @@
     </script>
 </head>
 <body>
-    <div class="section make-it-dark make-it-white-back">Cart List - Realtime display</div>
+    <h2 class=" section make-it-left make-it-white-back make-it-dark make-it-rounded-top make-it-normal">Cart List - Realtime display</h2>
     <div class="section">
         <div id="cartList">
             {{#each carts}}
                 <div class="box make-it-white-back">
                     <h5 class="make-it-dark-back make-it-white make-it-center make-it-rounded-top ">Cart {{cid}}</h5>
-                    <table class="table make-it-dark is-hoverable is-fullwidth">
+                    <table class="table make-it-dark make-it-small  is-hoverable is-fullwidth">
                         <thead>
                             <tr class="make-it-semi-back  make-it-rounded">
                                 <th>PID</th>
@@ -108,7 +108,7 @@
         <!-- Dropdown to select items per page -->
         <div class="field has-addons section">
             <div class="control">
-                <div class="select ">
+                <div class="select is-small">
                     <select id="itemsPerPageDropdown">
                         <option value="6" selected>6 carts per page</option>
                         <option value="12">12 carts per page</option>
@@ -117,15 +117,15 @@
                 </div>
             </div>
             <div class="control">
-                <button class="button " onclick="applyItemsPerPage()">Apply</button>
+                <button class="button is-small  " onclick="applyItemsPerPage()">Apply</button>
             </div>
         </div>
 
         <br>
         <div class="grid-container-3c-by-1r make-it-rounded make-it-white-back make-it-dark">
-            <button class="button " onclick="changePage(-1)">Prev</button>
-            <div class="content make-it-dark make-it-semi-back  make-it-rounded make-it-center section" id="cartCount"></div>
-            <button class="button " onclick="changePage(1)">Next</button>
+            <button class="button is-small  " onclick="changePage(-1)">Prev</button>
+            <div class="content make-it-dark make-it-small  make-it-semi-back  make-it-rounded make-it-center section" id="cartCount"></div>
+            <button class="button is-small  " onclick="changePage(1)">Next</button>
         </div>
         
         <div class="content make-it-dark make-it-rounded-top make-it-semi-back  rt-general-page-footer" id="paginationInfo"></div>
