--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -7,7 +7,7 @@
 
 </head>
     <body>
-        <h2 class=" section make-it-left make-it-white-back make-it-dark make-it-rounded-top make-it-normal">Admin Dashboard</h2>
+        <h2 class=" section make-it-left make-it-white-back make-it-dark make-it-small  make-it-rounded-top make-it-normal">Admin Dashboard</h2>
         <section class="section">
 
         <div class="columns is-multiline is-centered">
