--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -17,37 +17,34 @@
                 <!-- controls -->
                 <div class="grid-container-2c66-by-1r make-it-semi-back  make-it-rounded section">
                     <!-- Sorting Options -->
-                        <div class="make-it-semi-back  make-it-center">
-                            <div class="make-it-semi-back make-it-normal make-it-center section">Sort by</div>
-                            <a class="button " href="?page=1&limit={{limit}}&sort=title&sortOrder=asc">Title asc</a>
-                            <a class="button " href="?page=1&limit={{limit}}&sort=title&sortOrder=desc">Title desc</a>
-                            <a class="button " href="?page=1&limit={{limit}}&sort=price&sortOrder=asc">Price asc</a>
-                            <a class="button " href="?page=1&limit={{limit}}&sort=price&sortOrder=desc">Price desc</a>
-                            <a class="button " href="?page=1&limit={{limit}}&sort=stock&sortOrder=asc">Stock asc</a>
-                            <a class="button " href="?page=1&limit={{limit}}&sort=stock&sortOrder=desc">Stock desc</a>
+                        <div class="make-it-semi-back grid-container-6c-by-1r make-it-center make-it-small">
+                            <a class="navbar-item is-small " href="?page=1&limit={{limit}}&sort=title&sortOrder=desc">Title desc</a>
+                            <a class="navbar-item is-small " href="?page=1&limit={{limit}}&sort=price&sortOrder=asc">Price asc</a>
+                            <a class="navbar-item is-small " href="?page=1&limit={{limit}}&sort=price&sortOrder=desc">Price desc</a>
+                            <a class="navbar-item is-small " href="?page=1&limit={{limit}}&sort=stock&sortOrder=asc">Stock asc</a>
+                            <a class="navbar-item is-small " href="?page=1&limit={{limit}}&sort=stock&sortOrder=desc">Stock desc</a>
                         </div>
 
                     <!-- Limit Dropdown -->
-                    <div class="column is-10">
-                        <div class="make-it-semi-back make-it-normal make-it-center">
-                            <div class="make-it-semi-back make-it-center section">Items per page</div>
-                            <div class="select ">
+                    <div class="">
+                        <div class="grid-container-2c-by-1r make-it-semi-back make-it-normal make-it-center">
+                            <div class="select is-small">
                                 <select id="limit-select">
                                     <option value="10" {{#if (eq limit '10')}}selected{{/if}}>10</option>
                                     <option value="20" {{#if (eq limit '20')}}selected{{/if}}>20</option>
                                     <option value="50" {{#if (eq limit '50')}}selected{{/if}}>50</option>
                                 </select>
                             </div>
-                            <button class="button is-warning " onclick="applyLimit()">Apply</button>
+                            <button class="button is-small  is-warning " onclick="applyLimit()">Apply</button>
                         </div>
                     </div>
                 </div>
 
                 <!-- Pagination Controls -->
                 <div class="column is-10">
-                    <div class="make-it-dark-back is-centered make-it-rounded-top grid-container-3c-by-1r" role="navigation" aria-label="pagination">
+                    <div class="make-it-dark-back is-centered make-it-rounded-top grid-container-3c-by-1r-special" role="navigation" aria-label="pagination">
                         <!-- Previous Page Link -->
-                        <a class="button section " 
+                        <a class="button is-small  section " 
                         href="?page={{prevPage}}&limit={{limit}}&sort={{sort}}&sortOrder={{sortOrder}}" 
                         {{#if (eq currentPage 1)}}disabled{{/if}}>Prev page</a>
 
@@ -56,7 +53,7 @@
                         </div>
 
                         <!-- Next Page Link -->
-                        <a class="button section " 
+                        <a class="button is-small  section " 
                         href="?page={{nextPage}}&limit={{limit}}&sort={{sort}}&sortOrder={{sortOrder}}" 
                         {{#if (eq currentPage totalPages)}}disabled{{/if}}>Next page</a>
 
@@ -82,7 +79,7 @@
                 {{#if products.length}}
                     {{#each products}}
                         <div class="column is-12-mobile is-3-desktop">
-                            <div class="make-it-white-back make-it-dark make-it-rounded-top card-title-container make-it-normal">
+                            <div class="make-it-semi-back make-it-rounded-top card-title-container make-it-dark">
                                 <div>
                                     {{this.title}}
                                 </div>
@@ -98,7 +95,7 @@
                                     <div class="card-category-badge-prebuilt">
                                             {{this.category}}
                                     </div>
-                                    <div class="columns make-it-white-back make-it-rounded make-it-dark  section">
+                                    <div class="columns make-it-white-back make-it-rounded make-it-dark make-it-small   section">
 
                                         <div class="column is-6 make-it-left">
                                             <p><b>Price:</b>${{this.price}}</p>
@@ -121,11 +118,11 @@
                                 </form>
 
 
-                                <div class="make-it-dark  section make-it-center">PID: {{this.pid}}</div>
+                                <div class="make-it-dark make-it-small   section make-it-center">PID: {{this.pid}}</div>
 
 
 {{!--                                 <div class="make-it-right section">
-                                    <button class="button  is-warning" onclick="document.getElementById('addToCartForm-{{this.pid}}').submit();">Add to cart</button>
+                                    <button class="button is-small   is-warning" onclick="document.getElementById('addToCartForm-{{this.pid}}').submit();">Add to cart</button>
                                 </div> --}}
                             </div>
                         </div>
